--- a/styles/style.css
+++ b/styles/style.css
@@ -229,13 +229,56 @@ ul li {
     /* width: 1140px; */
     /* margin: auto; */
     margin-top: 50px;
+    
 }
 
 .break-line{
     display: none;
 }
 
+/* off section */
 
+.off-section{
+    width: 1140px;
+    margin: auto;
+    margin-top: 50px;
+}
+
+.off-content{
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 28px;
+}
+
+.bloom-plant{
+    background-image: url('/assets/deal-bloom.png');
+    width: 366px;
+    height: 206px;
+    background-repeat: no-repeat;
+}
+
+.ana-plant{
+    background-image: url('/assets/deal-ana.png');
+     background-repeat: no-repeat;
+    width: 366px;
+    height: 206px;
+    margin-top: 10px;
+}
+
+.zabo-plant{
+    background-image: url('/assets/deal-zabo.png');
+     background-repeat: no-repeat;
+    width: 753px;
+    height: 423px;
+}
+
+.bloom-plant, .ana-plant, .zabo-plant {
+      display: flex;
+    flex-direction: column;
+    align-items: center; 
+    justify-content: center;
+    border-radius: 8px;
+}
 
 
 @media screen  and (max-width: 480px) {
@@ -383,6 +426,35 @@ ul li {
     margin: auto;
 }
 
+/* off section */
+
+.off-section{
+    padding: 0px 10px;
+    /* margin: auto; */
+    width: 393px;
+    /* display: flex;
+    justify-content: center;
+    align-items: center; */
+}
+
+.off-content{
+    grid-template-columns: 1fr;
+    gap: 10px;
+    margin-top: 50px;
+}
+
+.off-title{
+    font-size: 20px;
+}
+
+.zabo-plant > a{
+    font-size: 16px;
+}
+
+.bloom-plant, .ana-plant, .zabo-plant{
+    width: 361px;
+    height: 184px;    
+}
     
 }
 
