--- a/styles/style.css
+++ b/styles/style.css
@@ -70,10 +70,6 @@ header{
     align-items: center;
 }
 
-.logo-img{
-
-}
-
 nav a{
     margin-left: 48px;
     color: #8987A1;
@@ -98,9 +94,9 @@ nav a{
     color: #000000;
 }
 
-.banner-description{
+.banner-description, .plants-description, .footer-description{
     font-size: 22px;
-    color: gray;
+    color: #8987A1;
 
 }
 
@@ -141,10 +137,6 @@ span{
     
 }
 
-.plants-description{
-    font-size: 22px;
-    color: #8987A1;
-}
 
 .card-div{
     margin-top: 50px;
@@ -304,6 +296,42 @@ input{
     width: 186px;
     height: 50px;
     margin-top: 20px;
+}
+
+/* footer */
+
+footer{
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin: auto;
+    padding: 50px;
+    background-color: #FFFFFF;
+}
+
+.footer-content{
+    width: 1120px;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+}
+
+.footer-logo{
+    width: 359px;
+    margin-right: 50px;
+}
+
+footer ul li{
+    font-size: 16px;
+    color: rgb(128, 128, 128, 50);
+    column-gap: 32px;
+}
+
+
+.social-site{
+    height: 36px;
+    display: flex;
+    gap: 24px;
 }
 
 
@@ -495,6 +523,28 @@ input{
 
 .join-btn{
     width: 103px;
+}
+
+/* footer section */
+
+footer{
+    width: 393px;
+}
+
+.footer-content{
+    width: 393px;
+    display: grid;
+    grid-template-columns: 1fr;
+    gap: 10px;
+    padding-left: 20px;
+}
+
+.footer-description{
+    font-size: 16px;
+}
+
+.social-site{
+    margin-top: 20px;
 }
 
 
