--- a/styles/style.css
+++ b/styles/style.css
@@ -1,68 +1,55 @@
-*{
+* {
     margin: 0px;
     padding: 0px;
 }
 
-body{
+body {
     background-color: #F5F8FF;
 }
 
 .noto-serif-bold {
-  font-family: "Noto Serif", serif;
-  font-optical-sizing: auto;
-  font-weight: bold;
-  font-style: normal;
-  font-variation-settings:
-    "wdth" 100;
-}
-
-.noto-serif-bold {
-  font-family: "Noto Serif", serif;
-  font-optical-sizing: auto;
-  font-weight: bold;
-  font-style: normal;
-  font-variation-settings:
-    "wdth" 100;
+    font-family: "Noto Serif", serif;
+    font-optical-sizing: auto;
+    font-weight: bold;
+    font-style: normal;
+    font-variation-settings:
+        "wdth" 100;
 }
 
 .inter-bold {
-  font-family: "Inter", sans-serif;
-  font-optical-sizing: auto;
-  font-weight: bold;
-  font-style: normal;
+    font-family: "Inter", sans-serif;
+    font-optical-sizing: auto;
+    font-weight: bold;
+    font-style: normal;
 }
 
 .inter-semi-bold {
-  font-family: "Inter", sans-serif;
-  font-optical-sizing: auto;
-  font-weight: 600;
-  font-style: normal;
+    font-family: "Inter", sans-serif;
+    font-optical-sizing: auto;
+    font-weight: 600;
+    font-style: normal;
 }
 
 .inter-regular {
-  font-family: "Inter", sans-serif;
-  font-optical-sizing: auto;
-  font-weight: 400;
-  font-style: normal;
+    font-family: "Inter", sans-serif;
+    font-optical-sizing: auto;
+    font-weight: 400;
+    font-style: normal;
 }
 
 .inter-medium {
-  font-family: "Inter", sans-serif;
-  font-optical-sizing: auto;
-  font-weight: 500;
-  font-style: normal;
+    font-family: "Inter", sans-serif;
+    font-optical-sizing: auto;
+    font-weight: 500;
+    font-style: normal;
 }
 
-header{
+header {
     margin: auto;
     margin-top: 20px;
 }
 
-.header-container{
-   
-}
-
-.header-content{
+.header-content {
     display: flex;
     width: 1140px;
     margin: auto;
@@ -70,17 +57,17 @@ header{
     align-items: center;
 }
 
-nav a{
+nav a {
     margin-left: 48px;
     color: #8987A1;
     font-size: 16px;
 }
 
-.active{
+.active {
     color: black;
 }
 
-.banner-content{
+.banner-content {
     margin-top: 50px;
     display: flex;
     align-items: center;
@@ -89,41 +76,47 @@ nav a{
 
 }
 
-.banner-heading{
+.banner-heading {
     font-size: 65px;
     color: #000000;
 }
 
-.banner-description, .plants-description, .footer-description{
+.banner-description,
+.plants-description,
+.footer-description {
     font-size: 22px;
     color: #8987A1;
 
 }
 
-span{
+.banner-description {
+    text-shadow: 1px 1px 4px #8987a1;
+}
+
+span {
     color: #E95A08;
 }
 
-.banner-text{
+.banner-text {
     width: 570px;
 }
 
-.banner-img{
+.banner-img {
     width: 570px;
 }
 
-.mobile-nav{
+.mobile-nav {
     display: none;
 }
 
 /* plants section */
 
-.plants-container{
+.plants-container {
     width: 1140px;
     margin: auto;
 }
 
-.plants-content{
+.plants-content {
     width: 1140px;
     display: grid;
     grid-template-columns: auto;
@@ -132,140 +125,174 @@ span{
     padding-top: 50px;
 }
 
-.plants-heading{
+.plants-heading {
     font-size: 50px;
-    
+
 }
 
 
-.card-div{
+.card-div {
     margin-top: 50px;
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr;
     gap: 20px;
 }
 
-.card{
+.card {
     text-align: center;
     width: 270px;
     height: 484px;
     display: grid;
 }
 
-.card-img{
+.card-img {
     width: 270px;
 }
 
-.card-title{
-   font-size: 22px;
-}
-
-.card-prize{
+.card-title {
     font-size: 22px;
 }
 
-.card-btn{
+.card-prize {
+    font-size: 22px;
+}
+
+.card-btn {
     background-color: #E95A08;
     font-size: 16px;
     color: #F5F8FF;
 }
 
-.lover-container{
+.lover-container {
     display: flex;
     width: 1140px;
     margin: auto;
     justify-content: space-between;
-    align-items: center;
-    margin-top: 100px;
+    margin-top: 200px;
+
 }
 
-.lover-img{
+.lover-img {
     width: 540px;
-    
+    position: relative;
+
+
 }
 
-.lover-content{
+.lover-content {
     width: 540px;
+    height: 520px;
+    padding: 20px 0px;
 }
 
-.lover-title{
+.trusted-badge {
+    width: 280px;
+    position: absolute;
+    top: -20%;
+    right: -20%;
+}
+
+.lover-title {
     font-size: 50px;
+    padding-left: 50px;
 }
 
-.lover-list{
-
-}
-
-ul li {
-    margin-top: 20px;
-}
-
-
-
-.lover-item{
+.lover-content ul li {
+    width: 540px;
     font-size: 22px;
     color: #8987A1;
-    padding-left: 10px;
+    margin-top: 10px;
+    display: flex;
+    flex-direction: column;
+    align-items: end;
 }
+
+
 
 /* Deal section */
 
-.deal-section{
-    margin-top: 50px;
-    
+.deal-section {
+    margin-top: 100px;
+
 }
 
-.break-line{
+.break-line {
     display: none;
 }
 
 /* off section */
 
-.off-section{
+.off-section {
     width: 1140px;
     margin: auto;
     margin-top: 50px;
 }
 
-.off-content{
+.off-content {
     display: grid;
     grid-template-columns: 1fr 1fr;
     gap: 28px;
 }
 
-.bloom-plant{
+.bloom-plant {
     background-image: url('/assets/deal-bloom.png');
     width: 366px;
     height: 206px;
     background-repeat: no-repeat;
 }
 
-.ana-plant{
+.ana-plant {
     background-image: url('/assets/deal-ana.png');
-     background-repeat: no-repeat;
+    background-repeat: no-repeat;
     width: 366px;
     height: 206px;
     margin-top: 10px;
 }
 
-.zabo-plant{
+.zabo-plant {
     background-image: url('/assets/deal-zabo.png');
-     background-repeat: no-repeat;
+    background-repeat: no-repeat;
     width: 753px;
     height: 423px;
 }
 
-.bloom-plant, .ana-plant, .zabo-plant {
-      display: flex;
+.bloom-plant,
+.ana-plant,
+.zabo-plant {
+    display: flex;
     flex-direction: column;
-    align-items: center; 
+    align-items: center;
     justify-content: center;
     border-radius: 8px;
 }
 
+.overlay {
+    position: absolute;
+    inset: 0;
+    background-color: rgba(0, 0, 0, 0.4);
+    border-radius: 8px;
+    z-index: 1;
+}
+
+.bloom-plant,
+.ana-plant,
+.zabo-plant {
+    position: relative;
+}
+
+.bloom-plant>h3,
+.bloom-plant>a,
+.ana-plant>h3,
+.ana-plant>a,
+.zabo-plant>h3,
+.zabo-plant>a {
+    position: relative;
+    z-index: 2;
+}
+
 /* join section */
 
-.join-section{
+.join-section {
     width: 100%;
     height: 533px;
     background-image: url('/assets/news-letter-bg.png');
@@ -278,13 +305,13 @@ ul li {
 }
 
 
-.join-content{
+.join-content {
     width: 830px;
     text-align: center;
-    
+
 }
 
-input{
+input {
     width: 644px;
     height: 50px;
     padding: 20px;
@@ -292,7 +319,7 @@ input{
     background-color: #FFFFFF;
 }
 
-.join-btn{
+.join-btn {
     width: 186px;
     height: 50px;
     margin-top: 20px;
@@ -300,254 +327,295 @@ input{
 
 /* footer */
 
-footer{
+footer {
     width: 100%;
     display: flex;
     align-items: center;
     justify-content: center;
-    margin: auto;
+    /* margin: auto; */
     padding: 50px;
     background-color: #FFFFFF;
 }
 
-.footer-content{
+.footer-content {
     width: 1120px;
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr;
 }
 
-.footer-logo{
+.footer-logo {
     width: 359px;
     margin-right: 50px;
+    margin-top: 20px;
 }
 
-footer ul li{
+.footer-description{
+    margin-top: 20px;
+}
+
+footer ul li {
     font-size: 16px;
     color: rgb(128, 128, 128, 50);
-    column-gap: 32px;
+    display: flex;
+    margin-top: 20px;
 }
 
 
-.social-site{
+.social-site {
     height: 36px;
     display: flex;
     gap: 24px;
+    margin-top: 20px;
 }
 
 
-@media screen  and (max-width: 480px) {
+@media screen and (max-width: 480px) {
 
-    .header-content, .banner-content{
-        width: 360px;
+    .header-content,
+    .banner-content {
+        width: 393px;
     }
 
-    .logo-img{
+    .header-content {
+        padding: 10px;
+    }
+
+    .logo-img {
         width: 63px;
     }
 
-    .active{
+    .active {
         width: 22px;
         height: 15px;
         font-size: 16px;
     }
 
-    .banner-content{
-        width: 100%;
-        flex-direction: column;
+    .banner-content {
+        flex-direction: column-reverse;
         margin-top: auto;
         padding-top: 20px;
     }
 
-    .banner-heading{
-    font-size: 24px;
-    color: #000000;
-}
-
-.banner-description{
-    font-size: 14px;
-    color: gray;
-}
-
-.banner-text{
-    width: 360px;
-    margin: 20px auto;
-}
-
-    .banner-img{
-        width: 100%;
+    .break-line {
+        display: block;
     }
 
-    .mobile-nav{
+    .banner-heading {
+        font-size: 24px;
+        color: #000000;
+        margin-bottom: 10px;
+    }
+
+    .banner-description {
+        font-size: 14px;
+        color: gray;
+    }
+
+    .banner-text {
+        width: 360px;
+        margin: 20px auto;
+    }
+
+
+    .banner-img {
+        width: 393px;
+    }
+
+    .mobile-nav {
         display: inline-block;
     }
 
-    .desktop-nav{
+    .desktop-nav {
         display: none;
     }
 
     /* card section */
 
-    .plants-container{
-    width: 393px;
-    margin: auto;
+    .plants-container {
+        width: 393px;
+        margin: auto;
+    }
+
+    .plants-content {
+        width: 336px;
+        margin: auto;
+    }
+
+    br {
+        display: none;
+    }
+
+    .plants-heading {
+        font-size: 24px;
+    }
+
+    .plants-description {
+        font-size: 14px;
+        margin-top: 10px;
+    }
+
+    .card-div {
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        padding-left: 10px;
+        padding-right: 10px;
+    }
+
+    .card {
+        width: 171px;
+        height: 340px;
+
+    }
+
+    .card-title,
+    .card-prize,
+    .card-btn {
+        font-size: 16px;
+    }
+
+    /* lover section */
+
+    .lover-container {
+        display: flex;
+        flex-direction: column;
+        width: 361px;
+        margin: auto;
+    }
+
+
+    .lover-img {
+        width: 361px;
+        margin-top: 50px;
+    }
+
+    .trusted-badge {
+        display: none;
+    }
+
+    .lover-content {
+        width: 361px;
+        height: 397px;
+    }
+
+    .lover-title {
+        font-size: 24px;
+        padding: 0px;
+    }
+
+    .lover-item {
+        font-size: 14px;
+        width: 361px;
+    }
+
+    .lover-content ul li {
+        font-size: 14px;
+        width: 361px;
+        padding-left: 10px;
+    }
+
+
+
+
+    /* Deal section */
+
+    .deal-section {
+        width: 393px;
+        margin: auto;
+        margin-top: 0px;
+    }
+
+    .deal-title {
+        font-size: 24px;
+        margin-bottom: 10px;
+    }
+
+    .deal-subtitle {
+        font-size: 14px;
+        width: 336px;
+        margin: auto;
+    }
+
+    /* off section */
+
+    .off-section {
+        padding: 0px 10px;
+        width: 393px;
+    }
+
+    .off-content {
+        grid-template-columns: 1fr;
+        gap: 10px;
+        margin-top: 50px;
+    }
+
+    .off-title {
+        font-size: 20px;
+    }
+
+    .zabo-plant>a {
+        font-size: 16px;
+    }
+
+    .bloom-plant,
+    .ana-plant,
+    .zabo-plant {
+        width: 361px;
+        height: 184px;
+    }
+
+    /* join section */
+
+    .join-section {
+        width: 393px;
+        height: 275px;
+        background-size: cover;
+        background-repeat: no-repeat;
+    }
+
+    .join-content {
+        width: 321px;
+    }
+
+    .join-heading {
+        font-size: 20px;
+    }
+
+    input {
+        width: 218px;
+    }
+
+    .join-btn {
+        width: 103px;
+    }
+
+    /* footer section */
+
+    footer {
+        width: 393px;
+    }
+
+    .footer-content {
+        width: 393px;
+        display: grid;
+        grid-template-columns: 1fr;
+        gap: 10px;
+        padding-left: 20px;
+    }
+
+    .footer-description {
+        font-size: 16px;
+        margin-top: 10px;
+    }
+
+    .social-site {
+        margin-top: 20px;
+    }
+
+    footer ul li {
+        font-size: 16px;
+        margin-top: 10px;
+    }
+
+
+
 }
-
-.plants-content{
-    width: 336px;
-    margin: auto;
-}
-
-br{
-    display: none;
-}
-
-.plants-heading{
-    font-size: 24px;
-}
-
-.plants-description{
-    font-size: 14px;
-    margin-top: 10px;
-}
-
-.card-div{
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    padding-left: 10px;
-    padding-right: 10px;
-}
-
-.card{
-    width: 171px;
-    height: 340px;
-   
-}
-
-.card-title, .card-prize, .card-btn{
-   font-size: 16px;
-}
-
-/* lover section */
-
-.lover-container{
-    width: 100%;
-    flex-direction: column;
-}
-
-.lover-img, .lover-content{
-    width: 361px;
-    
-}
-
-.lover-content{
-    margin-top: 18px;
-}
-
-.lover-title{
-    font-size: 24px;
-}
-
-.lover-item{
-    font-size: 14px;
-    
-} 
-
-ul li {
-    margin-top: 16px;
-}
-
-/* Deal section */
-
-.deal-section{
-    width: 393px;
-    margin: auto;
-    margin-top: 100px;
-}
-
-.deal-title{
-    font-size: 24px;
-}
-
-.deal-subtitle{
-    font-size: 14px;
-    width: 336px;
-    margin: auto;
-}
-
-/* off section */
-
-.off-section{
-    padding: 0px 10px;
-    width: 393px;
-}
-
-.off-content{
-    grid-template-columns: 1fr;
-    gap: 10px;
-    margin-top: 50px;
-}
-
-.off-title{
-    font-size: 20px;
-}
-
-.zabo-plant > a{
-    font-size: 16px;
-}
-
-.bloom-plant, .ana-plant, .zabo-plant{
-    width: 361px;
-    height: 184px;    
-}
-
-/* join section */
-
-.join-section{
-    width: 393px;
-    height: 275px;
-    background-size: cover;
-    background-repeat: no-repeat;
-}
-
-.join-content{
-    width: 321px;
-}
-
-.join-heading{
-    font-size: 20px;
-}
-
-input{
-    width: 218px;
-}
-
-.join-btn{
-    width: 103px;
-}
-
-/* footer section */
-
-footer{
-    width: 393px;
-}
-
-.footer-content{
-    width: 393px;
-    display: grid;
-    grid-template-columns: 1fr;
-    gap: 10px;
-    padding-left: 20px;
-}
-
-.footer-description{
-    font-size: 16px;
-}
-
-.social-site{
-    margin-top: 20px;
-}
-
-
-    
-}
-
