--- a/styles/style.css
+++ b/styles/style.css
@@ -90,7 +90,7 @@ nav a {
 }
 
 .banner-description {
-    text-shadow: 1px 1px 4px #8987a1;
+     color: rgba(0, 0, 0, 0.534);
 }
 
 span {
@@ -235,14 +235,14 @@ span {
 }
 
 .bloom-plant {
-    background-image: url('/assets/deal-bloom.png');
+    background-image: url('../assets/deal-bloom.png');
     width: 366px;
     height: 206px;
     background-repeat: no-repeat;
 }
 
 .ana-plant {
-    background-image: url('/assets/deal-ana.png');
+    background-image: url('../assets/deal-ana.png');
     background-repeat: no-repeat;
     width: 366px;
     height: 206px;
@@ -250,7 +250,7 @@ span {
 }
 
 .zabo-plant {
-    background-image: url('/assets/deal-zabo.png');
+    background-image: url('../assets/deal-zabo.png');
     background-repeat: no-repeat;
     width: 753px;
     height: 423px;
@@ -295,7 +295,7 @@ span {
 .join-section {
     width: 100%;
     height: 533px;
-    background-image: url('/assets/news-letter-bg.png');
+    background-image: url('../assets/news-letter-bg.png');
     background-repeat: no-repeat;
     display: flex;
     flex-direction: column;
@@ -570,6 +570,7 @@ footer ul li {
         height: 275px;
         background-size: cover;
         background-repeat: no-repeat;
+        overflow: hidden;
     }
 
     .join-content {
@@ -592,6 +593,7 @@ footer ul li {
 
     footer {
         width: 393px;
+        overflow: hidden;
     }
 
     .footer-content {
